Closed
Bug 35338
Opened 26 years ago
Closed 1 year ago
Overzealous blocking of cross-posting to multiple hosts
Categories
(MailNews Core :: Backend, defect, P5)
Tracking
(Not tracked)
RESOLVED
FIXED
137 Branch
People
(Reporter: sspitzer, Unassigned)
References
(Blocks 2 open bugs)
Details
(Whiteboard: [fixed by bug 230899])
two parts to this bug:
the first part:
the code that determines if you are trying to cross post to multiple hosts is
too strict, and reports false positives.
the second part:
what's worse, is the error message never pops up, so you don't know why the
message didn't post or why the compose window won't go away.
| Reporter | ||
Comment 1•26 years ago
|
||
I have the fix for at least part of this bug in my tree at home. will check in
for m16.
Status: NEW → ASSIGNED
Priority: P3 → P1
Summary: [NEWS] overzealous blocking of cross-posting to multiple hosts → [NEWS] overzealous blocking of cross-posting to multiple hosts
Target Milestone: --- → M16
| Reporter | ||
Comment 2•26 years ago
|
||
ok, the good news is the alert now shows up if you attempt to cross post to
multiple servers.
the bad news is we are still being over-zealous.
Comment 3•26 years ago
|
||
Seth, I think you fixed the P1 part of this. The overzealous part doesn't seem
critical for M16. If you disagree, please explain in the bug and move it back.
Target Milestone: M16 → M17
| Reporter | ||
Comment 4•25 years ago
|
||
now that we have hostinfo.dat support, I can fix this.
Comment 7•25 years ago
|
||
Do we have a reproducible case for this? Probably wouldn't hold beta2 for this
unless we know how to reproduce it.
Comment 8•25 years ago
|
||
removing nsbeta2+ and asking for consideration to cut from beta2.
Whiteboard: [nsbeta2+]
Comment 9•25 years ago
|
||
Putting on [nsbeta2-] radar. Not critical to beta2. Adding "relnote" keyword
for PR2 release.
Keywords: relnote
Whiteboard: [nsbeta2-]
Comment 10•25 years ago
|
||
Will look at this and see if it warrants release note in beta2. Changed relnote
to relnote2
Comment 11•25 years ago
|
||
Well, I don't know about the cases Seth was referring to, but in the cases I've
tried I do see an alert telling me I can only post to one server at a time. I
tried posting a message to the same server, but specifying one group by group
name "netscape.test" and the other by url (to the same server)
"news://news.mozilla.org/netscape.public.test. It errored, but told me why it
was complaining and as soon as I changed back to group name I was ok and posting
posted.
Will wait for seth's comments later, removing relnote.
Comment 12•25 years ago
|
||
Using both the M17 build and the M18 nightlies, I can't post to more than 1
group even in the same server (when replying to messages, at least. Haven't
tried to post a new message.).
And, most annoying, the message telling I can't post to more than one server
pops up one time for each group in the list...
| Reporter | ||
Updated•25 years ago
|
QA Contact: laurel → stephend
Comment 13•25 years ago
|
||
marking nsbeta1-.
| Reporter | ||
Comment 14•25 years ago
|
||
clearing milestone, m17 and m18 are meaningless now. these need to be triages
along with the rest.
Target Milestone: M17 → ---
| Reporter | ||
Comment 15•25 years ago
|
||
adding phil, he just got bit by this.
I just talked it over with bienvenu, and I'll fix it to do what we did in 4.x
Target Milestone: --- → mozilla0.9
Comment 16•25 years ago
|
||
removing mozilla0.9 and nominating for nsbeta1
Comment 17•25 years ago
|
||
marking nsbeta1- but if you have the fix (I saw something go into the perf
branch) then check it in.
Comment 18•24 years ago
|
||
This happens in 0.8.1. I get a warning when trying to reply to a message that
was crossposted in n.p.m.wishlist and n.p.m.ui.
*** Bug 77147 has been marked as a duplicate of this bug. ***
Comment 20•24 years ago
|
||
This violates GNKSA section #3a: "When creating either a new article or a
followup, the user MUST be allowed to specify multiple newsgroups, and the
software MUST cross-post (not multi-post) to them if more than one is
specified". Blocks bug #76449 and bug #12699.
Blocks: gnksa
Comment 21•24 years ago
|
||
Comments From Marcelo Vanzin 2000-08-11 15:17:
> Using both the M17 build and the M18 nightlies, I can't post to more than 1
> group even in the same server (when replying to messages, at least. Haven't
> tried to post a new message.).
I see the same. I have several news servers in my profile. Marcelo, Garth, you too?
If the bug happens only in this case, I don't think that it blocks GNAKSA
compliance.
Comment 22•24 years ago
|
||
nope, only one news server for me (news.mozilla.org, specifically)
| Reporter | ||
Comment 23•24 years ago
|
||
we never multi-post to multiple servers. we do allow cross posting.
the problem is if you have multiple servers set up, the code I wrote can
incorrectly determine that you are attempting to cross post to two servers and
not allow you to post at all.
Comment 24•24 years ago
|
||
Seth, yes, that's exactly what I guessed. But that doesn't explain Garth's problem.
Comment 25•24 years ago
|
||
When you fix it, please make sure that I can cross-post, even if only one of the
newsgroups appears in more than one of my servers, if that is not unreasonably
hard to implement.
E.g. I am subscribed to
news.myisp.com
mozilla.mail-news
alt.netscape-sucks
news.mozilla.org
mozilla.mail-news
mozilla.editor
Now I cross-post to mozilla.mail-news and mozilla.editor. It should succeed,
posting to news.mozilla.org.
| Reporter | ||
Comment 26•24 years ago
|
||
garth: you only had one news server, right? were you subscribed to either
group you attempted to post to? are you still able to reproduce this? please
start a new bug on your problem.
benb: your scenario is exactly the one I'll be trying to fix when I get some
cycles for this bug.
Comment 27•24 years ago
|
||
I'm subscribed to wishlist but not ui. That's probably the problem.
| Reporter | ||
Comment 28•24 years ago
|
||
garth, that should work fine.
if you can still reproduce this, can you take this to another bug? we'll figure
it out there.
Seth, we had some regression posting to two newsgroups on the same server (as
noted in bug 77147), but today on both Mac and Linux, I can cross-post to
netscape.test and netscape.public.test, so seems the regression was fixed and
this bug can now return to its regular scope ;-) Sorry for the noise.
Comment 30•24 years ago
|
||
When 0.9 comes out I'll try to reproduce it. If it's still there, I'll file the
new bug.
Comment 31•24 years ago
|
||
(This bug is quite terse, IMHO.) Can someone explain to me:
* What's the expected behaviour?
and
* What's our current behaviour?
Thanks.
Summary: [NEWS] overzealous blocking of cross-posting to multiple hosts → Overzealous blocking of cross-posting to multiple hosts
*** Bug 115205 has been marked as a duplicate of this bug. ***
Comment 33•24 years ago
|
||
Bug 115205 is distinguishable from this bug in that it has nothing to do with
attempting to post to multiple servers. Bug 115205 is therefore not a dupe.
Comment 34•24 years ago
|
||
Testing with 0.9.9 branch, build 2002031108
I think bug 115205 and this one are more or less the same things.
bug 115205 is reported as fixed, and indeed some situations are solved.
If you try to cross-post to one group you are subscribed too and another you are
not subscribed too, now you can.
If you try to cross-post to one group that exist, and another that doesn't
existe on your newsserver, you can and you have no warning. I don't consider
this as ideal. I think you should be allowed to do that, but with a warning. Now
any striking error in a cross-post will send your message to nowhere.
But the problem is that despite that, the exact problem described in comment #22
is still there !
Steps to reproduce :
- have an account on newsserver A and B.
- be subscribed to both groups X and Y on server B, but only to group X on server A.
- try to answer to a message on server B that is crossposted between X and Y.
This will fail with the error "you can only send a message to one news server at
a time". Don't close the message windows.
- Remove the subscription to group X on server A.
- Retry sending the message windows you didn't close. Now it works.
It doesn't really seem to matter whether A is before B or not in your list of
servers.
Comment 35•23 years ago
|
||
*** Bug 172115 has been marked as a duplicate of this bug. ***
Comment 37•23 years ago
|
||
Any plans to make the newsreader usable by fixing this P1 bug?
OS: Windows NT → All
Updated•23 years ago
|
Blocks: newsreader-core
Comment 38•22 years ago
|
||
according to description 1 in bug 172115.
when will it be fixed? (1.7a, Gecko/20040109)
Updated•21 years ago
|
Product: MailNews → Core
Comment 39•21 years ago
|
||
This bug still exists and is quite annoying. Using Mozilla 1.7.1, Gecko/20040707.
I want the normal ability to crosspost -- without being forced to unsubscribe to
every group I am crossposting to on my other news servers.
Comment 40•18 years ago
|
||
sorry for the spam. making bugzilla reflect reality as I'm not working on these bugs. filter on FOOBARCHEESE to remove these in bulk.
Assignee: sspitzer → nobody
Status: ASSIGNED → NEW
| Assignee | ||
Updated•17 years ago
|
Product: Core → MailNews Core
Updated•6 years ago
|
Priority: P1 → P5
Updated•3 years ago
|
Severity: normal → S3
Updated•3 years ago
|
Severity: S3 → S4
Comment 42•1 year ago
|
||
This was finally fixed in bug 230899 by removing the feature that prevented cross posting to groups subscribed on different servers. It appears that most news servers now enforce their own cross posting rules. Thunderbird will display the appropriate error message from the server in this case.
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Whiteboard: [fixed by bug 230899]
Target Milestone: Future → 137 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•