changes so that the alert for cross posting to multiple news server shows up. (instead of a silent failure.)  note, we are still being too over-zealous when deciding if you are cross posting to multiple servers.  see bug #35338