mailnews/base/public/msgCore.h
@@ -126,6 +126,8 @@ NS_ERROR_GENERATE_FAILURE(NS_ERROR_MODULE_MAILNEWS, value)
              conflict, I reserve values between 12500 and 12999 for it.
 */
 #define NS_MSGCOMP_ERROR_BEGIN	12500
+/* NS_ERROR_NNTP_NO_CROSS_POSTING lives here, and not in nsMsgComposeStringBundle.h, because it is used in news and compose. */
+#define NS_ERROR_NNTP_NO_CROSS_POSTING NS_MSG_GENERATE_FAILURE(12554)
 #define NS_MSGCOMP_ERROR_END	12999
 
 #define MSG_LINEBREAK NS_LINEBREAK
